Implemented Spring tests for both serivce layers and controller pertaining to the Owner class.